--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@mui/material": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@nextui-org/react": "^2.4.6",
+    "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.4",
     "formidable": "^3.5.1",
+    "leaflet": "^1.9.4",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12"
   },
